--- a/Lesson 3/Fimilar to tables.html
+++ b/Lesson 3/Fimilar to tables.html
@@ -15,7 +15,7 @@
              </div>
              <div class="section">
                 <h2>Types of animals</h2>
-                <table>
+                <table border="5">
                     <tr>
                         <th>Animals</th>
                         <th>Types</th>
@@ -41,6 +41,10 @@
              <br>
              2.Elephant
              </div>
+             <table boader="5">
+
+             </table>
+
         </body>
     </html>
 </DOCTYPE>
