--- a/Lesson 1/html structure.html
+++ b/Lesson 1/html structure.html
@@ -5,7 +5,7 @@
             codingal
         </title>
     </head>
-    <boday>
+    <body>
         <!--This web page is intro to HTML-->
         <h1>
           Intro to HTML         
@@ -27,5 +27,5 @@
             <br>
             4.boday
         </p>
-    </boday>
+    </body>
 </html>
