--- a/Lesson 4/Here I add media.html
+++ b/Lesson 4/Here I add media.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <video controls height="300" width="400">
-       <source src="28268-368753924_small (1).mp4" type="video/mp4">
+       <source src="video.mp4" type="video/mp4">
     </video>
-    <img src="woman-3092412_1280.jpg" alt="woman" width ="400" height ="400">
+    <img src="image woman.jpg" alt="woman" width ="400" height ="400">
     <audio controls>
         <source src="audio.mp3" type="audio/mp3">
     </audio>
