--- a/Lesson 5/Semantic element.html
+++ b/Lesson 5/Semantic element.html
@@ -7,39 +7,46 @@
     <section>
       <articles>
         <h3>Interesting info</h3>
-        <p>On this app you can get images of different types.
-          <br>And on the otherhand you can also get background musics on it.
+        <p>
+          On this app you can get images of different types. <br />And on the
+          otherhand you can also get background musics on it.
         </p>
-    <header>
-      <nav>
-        <a href="#section1">section1</a>
-      </nav>
-    </header>
-    <main>
-      <section id="section1">
-        <figure>
-          <img
-            src="../Lesson 4/image woman.jpg"
-            alt="woman"
-            height="400"
-            width="400"
-          />
-          <figcaption>Women in front of the mirror</figcaption>
-        </figure>
-      </section>
-      <header>
-        <nav>
-          <a href="#section2">section2</a>
+        <header>
+          <nav>
+            <a href="#section1">section1</a>
           </nav>
+        </header>
+        <main>
+          <section id="section1">
+            <figure>
+              <img
+                src="../Lesson 4/image woman.jpg"
+                alt="woman"
+                height="400"
+                width="400"
+              />
+              <figcaption>Women in front of the mirror (psycoh)</figcaption>
+            </figure>
+          </section>
+          <header>
+            <nav>
+              <a href="#section2">section2</a>
+            </nav>
           </header>
-          <hr>
-      <section id="section2">
-        <h2>Section 2:Background music</h2>
-        <figure>
-          <audio controls src="../Lesson 4/audio.mp3" type="audio/mp3"></audio>
-          <figcaption>This sound is used as an background music</figcaption>
-        </figure>
-      </section>
-    </main>
+          <hr />
+          <section id="section2">
+            <h2>Section 2:Background music</h2>
+            <figure>
+              <audio
+                controls
+                src="../Lesson 4/audio.mp3"
+                type="audio/mp3"
+              ></audio>
+              <figcaption>This sound is used as an background music</figcaption>
+            </figure>
+          </section>
+        </main>
+      </articles>
+    </section>
   </body>
 </html>
